cluster/mediaserver/seerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/version: v3.5.0
  name: seerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: seerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: seerr
        app.kubernetes.io/version: v3.5.0
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 10.43.0.53
        searches:
        - jellyfin.svc.cluster.local
        - svc.cluster.local
        - cluster.local
      containers:
      - image: ghcr.io/seerr-team/seerr:v3.5.0@sha256:27602401178d54f1964442287b9f23f67a3fa2252645ee8065839ea1c3f69e45
        name: seerr
        ports:
        - containerPort: 5055
          name: http
        volumeMounts:
        - mountPath: /app/config
          name: config
        resources:
          requests:
            cpu: 50m
            memory: 192Mi
          limits:
            cpu: "1"
            memory: 1Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          runAsNonRoot: true
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: 5055
          periodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: seerr-config
      - name: scripts
        configMap:
          name: seerr-scripts
      - name: tmp
        emptyDir: {}
